Peer Modal: Add padding around modal, move key to left-aligned, show close button, and fix cards not 2-col grid on wide screens

--- a/static/css/timetable/partials/peer_modal.scss
+++ b/static/css/timetable/partials/peer_modal.scss
@@ -22,13 +22,14 @@
       border-right: 1px solid t("modal-border-color");
     }
 
-    width: 200px;
+    width: 300px;
     min-height: 100%;
     height: fit-content;
     position: -webkit-sticky;
     position: sticky;
     top: 0;
-    padding-top: 10px;
+    padding: 2rem;
+    padding-top: 3rem;
 
     p {
       font-size: 16px;
@@ -47,7 +48,7 @@
 
     overflow-y: auto;
     width: 1000px;
-    padding: 20px 10px 20px 20px;
+    padding: 3rem;
     display: flex;
     flex-direction: column;
     border: 0;
@@ -61,6 +62,8 @@
     }
 
     .upsell {
+      margin-bottom: 10px;
+
       h4 {
         float: none;
         font-weight: 400;
@@ -120,11 +123,20 @@
     width: 50px;
   }
 
+  .peer-card-container {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+
+    @media screen and (min-width: 1024px) {
+      display: grid;
+      grid-template-columns: 1fr 1fr;
+      gap: 10px;
+    }
+  }
+
   .peer-card {
     float: left;
-    padding-bottom: 10px;
-    padding-right: 10px;
-    width: 50%;
 
     .user-info {
       height: 50px;
@@ -286,7 +298,6 @@
     width: 100%;
     padding-right: 10px;
     display: flex;
-    justify-content: flex-end;
     align-items: center;
     gap: 10px;
   }
